Cleaned up NAT behavior for non-standard ports

--- a/default.env
+++ b/default.env
@@ -2,7 +2,7 @@
 # This is vital for key import to work. You can find your UID with "echo $UID".
 LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
-COMPOSE_FILE=lh-base.yml:geth.yml:grafana.yml
+COMPOSE_FILE=lh-base.yml:geth.yml:lh-prysm-grafana.yml
 # ETH1 endpoint / chain source. This default uses the geth container
 # For Nimbus with geth, use ws://geth:8546, and the geth-archive.yml file
 # in COMPOSE_FILE
@@ -11,19 +11,17 @@ ETH1_NODE=http://geth:8545
 GRAFFITI=eth2-docker
 # Number of validators to create with deposit-cli
 NUMVAL=1
-# Chain to use for wallet creation and initial deposit
-DEPOSIT_CHAIN=medalla
-# Network to use for geth.
-ETH_NETWORK=--goerli
-# Testnet to use for eth2.
-TESTNET=medalla
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
+# Uncomment this if you need to restrict teku to just 4 GiB of RAM
+#TEKU_LOW_MEM=-Xmx4G
 # Leave this as-is to compile nimbus with support for metrics via grafana. 
 # Change to empty (nothing after first =) to disable that functionality
 NIM_METRICS=NIMFLAGS="-d:insecure"
-# Uncomment this if you need to restrict teku to just 4 GiB of RAM
-#TEKU_LOW_MEM=-Xmx4G
+# Testnet to use for eth2.
+TESTNET=medalla
+# Specific to Prysm, testnet that's NOT medalla
+#PRYSM_NONSTD_TESTNET=--zinken
 
 # Ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
@@ -31,31 +29,28 @@ GETH_PORT=30303
 LH_PORT=9000
 PRYSM_PORT=13000
 PRYSM_UDP_PORT=12000
-NIM_PORT=19000
+NIM_PORT=9000
 TEKU_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
+# Geth ports are for advanced config, not functional yet
 # Local geth http port if you are using geth-shared.yml. Do not expose to Internet, it is insecure http
 GETH_HTTP_PORT=8545 
-# Local geth ws port if you are using geth-archived-shared.yml. Do not expose to Internet, it is insecure
+# Local geth ws port if you are using geth-archive-shared.yml. Do not expose to Internet, it is insecure
 GETH_WS_PORT=8546
 
 # These variables are not likely to require adjustment
+# Network to use for geth.
+ETH_NETWORK=goerli
+
 GETH_BUILD_TARGET=release/1.9
 GETH_USER=geth
-GETH_ENTRYPOINT=geth --nousb --http --http.addr 0.0.0.0 --http.vhosts * --http.api eth,net --ipcdisable --datadir /var/lib/goethereum
 
 LH_BUILD_TARGET=master
 LH_USER=lighthouse
-LH_BN_ENTRYPOINT=lighthouse bn --datadir /var/lib/lighthouse --http --http-address 0.0.0.0
-LH_VAL_ENTRYPOINT=lighthouse --datadir /var/lib/lighthouse
 
 PRYSM_BUILD_TARGET=master
 PRYSM_USER=prysm
-#PRYSM_BN_ENTRYPOINT=beacon-chain --datadir /var/lib/prysm/ --rpc-host 0.0.0.0
-PRYSM_BN_ENTRYPOINT=start-prysm-beacon-extip.sh
-PRYSM_VAL_ENTRYPOINT=validator --datadir /var/lib/prysm --wallet-dir /var/lib/prysm/
-PRYSM_VAL_IMPORT_ENTRYPOINT=create-prysm-validator-wallet.sh
 
 NIM_BUILD_TARGET=devel
 NIM_USER=nimbus
