--- a/geth-archive.yml
+++ b/geth-archive.yml
@@ -1,6 +1,6 @@
 # Runs a full archive geth node with http and ws endpoints, local to the container network
 # Included for Nimbus, which requires a full archive geth. In main net, this would require
-# ~2TB storage. For Goerli, it is ~80GB
+# ~1.5TB storage. For Goerli, it is ~80GB
 version: "3"
 services:
   geth:
@@ -16,21 +16,28 @@ services:
     volumes:
       - geth-data:/var/lib/goethereum
     ports:
-      - ${GETH_PORT}:30303/tcp
-      - ${GETH_PORT}:30303/udp
+      - ${GETH_PORT}:${GETH_PORT}/tcp
+      - ${GETH_PORT}:${GETH_PORT}/udp
     expose:
       - 8545
       - 8546
-    entrypoint: ${GETH_ENTRYPOINT}
-    command:
-      - ${ETH_NETWORK}
-      - --gcmode
-      - "archive"
-      - --ws
-      - --ws.api
-      - eth,net
-      - --ws.addr
+    entrypoint:
+      - geth
+      - --nousb
+      - --http
+      - --http.addr
       - 0.0.0.0
+      - --http.vhosts=*
+      - --http.api
+      - eth,net
+      - --ipcdisable
+      - --datadir
+      - /var/lib/goethereum
+      - --${ETH_NETWORK}
+      - --port
+      - ${GETH_PORT}
+      - --gcmode=archive
+      - --syncmode=full
   beacon:
     depends_on:
       - geth
