--- a/geth.yml
+++ b/geth.yml
@@ -13,13 +13,25 @@ services:
     volumes:
       - geth-data:/var/lib/goethereum
     ports:
-      - ${GETH_PORT}:30303/tcp
-      - ${GETH_PORT}:30303/udp
+      - ${GETH_PORT}:${GETH_PORT}/tcp
+      - ${GETH_PORT}:${GETH_PORT}/udp
     expose:
       - 8545
-    entrypoint: ${GETH_ENTRYPOINT}
-    command:
-      - ${ETH_NETWORK}
+    entrypoint:
+      - geth
+      - --nousb
+      - --http
+      - --http.addr
+      - 0.0.0.0
+      - --http.vhosts=*
+      - --http.api
+      - eth,net
+      - --ipcdisable
+      - --datadir
+      - /var/lib/goethereum
+      - --${ETH_NETWORK}
+      - --port
+      - ${GETH_PORT}
   beacon:
     depends_on:
       - geth
