Added support for LH v0.3.0

--- a/default.env
+++ b/default.env
@@ -2,7 +2,7 @@
 # This is vital for key import to work. You can find your UID with "echo $UID".
 LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
-COMPOSE_FILE=lh-base.yml:geth.yml:lh-prysm-grafana.yml
+COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
 # ETH1 endpoint / chain source. This default uses the geth container
 # For Nimbus with geth, use ws://geth:8546, and the geth-archive.yml file
 # in COMPOSE_FILE
