--- a/lh-grafana.yml
+++ b/lh-grafana.yml
@@ -1,5 +1,12 @@
 version: "3"
 services:
+  beacon:
+    expose:
+      - 5054/tcp
+    command:
+      - --metrics
+      - --metrics-address
+      - 0.0.0.0
   prometheus:
     restart: "no"
     build:
@@ -10,7 +17,7 @@ services:
     environment:
       - CLIENT=${COMPOSE_FILE}
     expose:
-      - 9090
+      - 9090/tcp
     entrypoint: choose-config.sh
     command: ["/bin/prometheus", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles"]
     depends_on:
@@ -21,7 +28,7 @@ services:
     restart: "no"
     image: prom/node-exporter
     expose:
-      - 9100
+      - 9100/tcp
   grafana:
     restart: "no"
     image: grafana/grafana
