Support for Prysm voluntary exit

--- a/default.env
+++ b/default.env
@@ -11,6 +11,8 @@ ETH1_NODE=http://geth:8545
 GRAFFITI=eth2-docker
 # Number of validators to create with deposit-cli
 NUMVAL=1
+# Restart policy: Set to no if you do not want services to automatically restart
+RESTART=unless-stopped
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
 # Uncomment this if you need to restrict teku to just 4 GiB of RAM
@@ -20,8 +22,6 @@ LOG_LEVEL=info
 NIM_METRICS=NIMFLAGS="-d:insecure"
 # Testnet to use for eth2.
 TESTNET=medalla
-# Specific to Prysm, testnet that's NOT medalla
-#PRYSM_NONSTD_TESTNET=--zinken
 
 # Ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
