--- a/lh-grafana.yml
+++ b/lh-grafana.yml
@@ -8,7 +8,7 @@ services:
       - --metrics-address
       - 0.0.0.0
   prometheus:
-    restart: "no"
+    restart: "${RESTART}"
     build:
       context: ./prometheus
     image: prometheus
@@ -25,12 +25,12 @@ services:
       - validator
       - node-exporter
   node-exporter:
-    restart: "no"
+    restart: "${RESTART}"
     image: prom/node-exporter
     expose:
       - 9100/tcp
   grafana:
-    restart: "no"
+    restart: "${RESTART}"
     image: grafana/grafana
     volumes:
       - grafana-data:/var/lib/grafana
