--- a/nimbus-grafana.yml
+++ b/nimbus-grafana.yml
@@ -8,7 +8,7 @@ services:
       - --metrics-port=8008
       - --metrics-address=0.0.0.0
   prometheus:
-    restart: "no"
+    restart: "${RESTART}"
     build:
       context: ./prometheus
     image: prometheus
@@ -24,12 +24,12 @@ services:
       - beacon
       - node-exporter
   node-exporter:
-    restart: "no"
+    restart: "${RESTART}"
     image: prom/node-exporter
     expose:
       - 9100/tcp
   grafana:
-    restart: "no"
+    restart: "${RESTART}"
     image: grafana/grafana
     volumes:
       - grafana-data:/var/lib/grafana
