--- a/prometheus/prysm-prom.yml
+++ b/prometheus/prysm-prom.yml
@@ -21,6 +21,10 @@ scrape_configs:
   - job_name: 'beacon node'
     static_configs:
       - targets: ['beacon:8080']
+# Target for metanull's dashboard
+  - job_name: 'beacon'
+    static_configs:
+      - targets: ['beacon:8080']
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['node-exporter:9100']
