--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   beacon:
-    restart: "no"
+    restart: "${RESTART}"
     user: ${LOCAL_UID}:${LOCAL_UID}
     build:
       context: ./prysm
@@ -17,14 +17,11 @@ services:
       - ${PRYSM_UDP_PORT}:${PRYSM_UDP_PORT}/udp
     expose:
       - 4000
-      - 8080
     entrypoint:
       - beacon-chain
       - --datadir
       - /var/lib/prysm/
       - --rpc-host
-      - 0.0.0.0
-      - --monitoring-host
       - 0.0.0.0
       - --http-web3provider
       - ${ETH1_NODE}
@@ -34,9 +31,11 @@ services:
       - ${PRYSM_UDP_PORT}
       - --verbosity
       - ${LOG_LEVEL}
-    command: ${PRYSM_NONSTD_TESTNET}
+      - --blst
+      - --${TESTNET}
+      - --accept-terms-of-use
   validator:
-    restart: "no"
+    restart: "${RESTART}"
     user: ${LOCAL_UID}:${LOCAL_UID}
     build:
       context: ./prysm
@@ -47,22 +46,23 @@ services:
     image: prysm
     volumes:
       - prysmvalidator-data:/var/lib/prysm
-    expose:
-      - 8081
-    entrypoint: wait-for-beacon.sh beacon:4000 validator --datadir /var/lib/prysm --wallet-dir /var/lib/prysm/
-    command: 
-      - --monitoring-host
-      - 0.0.0.0
+    entrypoint:
+      - validator
+      - --datadir
+      - /var/lib/prysm
+      - --wallet-dir
+      - /var/lib/prysm/
       - --beacon-rpc-provider
       - beacon:4000
       - --graffiti
       - ${GRAFFITI}
       - --verbosity
       - ${LOG_LEVEL}
+      - --blst
+      - --${TESTNET}
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
       - /var/lib/prysm/password.txt
-      - ${PRYSM_NONSTD_TESTNET}
     depends_on:
       - beacon
   validator-import:
@@ -81,15 +81,44 @@ services:
     entrypoint: create-prysm-validator-wallet.sh
     command:
       - validator
+      - --verbosity
+      - ${LOG_LEVEL}
       - --datadir
       - /var/lib/prysm
-      - --wallet-dir
-      - /var/lib/prysm/
       - accounts-v2
       - import
+      - --wallet-dir
+      - /var/lib/prysm/
       - --keys-dir
       - /var/lib/prysm/validator_keys
-      - ${PRYSM_NONSTD_TESTNET}
+      - --${TESTNET}
+  validator-voluntary-exit:
+    restart: "no"
+    user: ${LOCAL_UID}:${LOCAL_UID}
+    image: prysm
+    build:
+      context: ./prysm
+      args:
+        - BUILD_TARGET=${PRYSM_BUILD_TARGET}
+        - USER=${PRYSM_USER}
+        - UID=${LOCAL_UID}
+    volumes:
+      - prysmvalidator-data:/var/lib/prysm
+    entrypoint:
+      - validator
+      - --verbosity
+      - ${LOG_LEVEL}
+      - --datadir
+      - /var/lib/prysm
+      - accounts-v2
+      - voluntary-exit
+      - --wallet-dir
+      - /var/lib/prysm/
+      - --beacon-rpc-provider
+      - beacon:4000
+      - --wallet-password-file
+      - /var/lib/prysm/password.txt
+      - --${TESTNET}
   deposit-cli:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
