Deposit-cli main net support

--- a/default.env
+++ b/default.env
@@ -4,24 +4,26 @@ LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
 COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
 # ETH1 endpoint / chain source. This default uses the geth container
-# For Nimbus with geth, use ws://geth:8546, and the geth-archive.yml file
-# in COMPOSE_FILE
 ETH1_NODE=http://geth:8545
 # Graffiti to use for validator, in order to receive POAP
 GRAFFITI=eth2-docker
 # Number of validators to create with deposit-cli
 NUMVAL=1
+# Advanced: Start index for recovery of validators or adding validators
+VAL_START_INDEX=0
 # Restart policy: Set to no if you do not want services to automatically restart
 RESTART=unless-stopped
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
-# Uncomment this if you need to restrict teku to just 4 GiB of RAM
-#TEKU_LOW_MEM=-Xmx4G
+# Uncomment this if you need to restrict teku to use 6 GiB of heap
+#TEKU_LOW_MEM=-Xmx6G
 # Leave this as-is to compile nimbus with support for metrics via grafana. 
 # Change to empty (nothing after first =) to disable that functionality
 NIM_METRICS=NIMFLAGS="-d:insecure"
-# Testnet to use for eth2.
-TESTNET=medalla
+# Network to use for eth2. Set to mainnet for main net.
+NETWORK=medalla
+# Network to use for geth. Comment out for main net.
+ETH_NETWORK=--goerli
 
 # Ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
@@ -33,32 +35,25 @@ NIM_PORT=9000
 TEKU_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
-# Geth ports are for advanced config, not functional yet
-# Local geth http port if you are using geth-shared.yml. Do not expose to Internet, it is insecure http
-GETH_HTTP_PORT=8545 
-# Local geth ws port if you are using geth-archive-shared.yml. Do not expose to Internet, it is insecure
-GETH_WS_PORT=8546
 
 # These variables are not likely to require adjustment
-# Network to use for geth.
-ETH_NETWORK=goerli
 
-GETH_BUILD_TARGET=release/1.9
+GETH_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 GETH_USER=geth
 
-LH_BUILD_TARGET=master
+LH_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 LH_USER=lighthouse
 
-PRYSM_BUILD_TARGET=master
+PRYSM_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 PRYSM_USER=prysm
+
+
+TEKU_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+TEKU_USER=teku
 
 NIM_BUILD_TARGET=devel
 NIM_USER=nimbus
 
-TEKU_BUILD_TARGET=master
-TEKU_USER=teku
-
-DEPCLI_BUILD_TARGET=master
+DEPCLI_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 DEPCLI_USER=depcli
-DEPCLI_ENTRYPOINT=./deposit.sh --folder /var/lib/depcli-data
 DEPCLI_LOCALDIR=./.eth2
