--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -23,7 +23,7 @@ services:
       - --log-file=/var/lib/nimbus/beacon_node.log
       - --tcp-port=${NIM_PORT}
       - --udp-port=${NIM_PORT}
-      - --network=${TESTNET}
+      - --network=${NETWORK}
       - --web3-url=${ETH1_NODE}
       - --graffiti=${GRAFFITI}
       - --log-level=${LOG_LEVEL}
@@ -41,7 +41,14 @@ services:
     volumes:
       - nimbus-data:/var/lib/nimbus
       - ${DEPCLI_LOCALDIR}/validator_keys:/var/lib/nimbus/validator_keys
-    entrypoint: ["/usr/local/bin/beacon_node", "deposits", "import", "--data-dir=/var/lib/nimbus", "--log-file=/var/lib/nimbus/beacon_node.log", "--network=${TESTNET}", "/var/lib/nimbus/validator_keys"]
+    entrypoint:
+      - /usr/local/bin/beacon_node
+      - --data-dir=/var/lib/nimbus
+      - --log-file=/var/lib/nimbus/beacon_node.log
+      - --network=${NETWORK}
+      - deposits
+      - import
+      - /var/lib/nimbus/validator_keys
   deposit-cli:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
@@ -54,12 +61,40 @@ services:
     image: eth2.0-deposit-cli
     volumes:
       - ${DEPCLI_LOCALDIR}:/var/lib/depcli-data
-    entrypoint: ${DEPCLI_ENTRYPOINT}
-    command:
+    entrypoint:
+      - python3
+      - /app/eth2deposit/deposit.py
+      - new-mnemonic
+      - --folder
+      - /var/lib/depcli-data
       - --num_validators
       - ${NUMVAL}
       - --chain
-      - ${TESTNET}
+      - ${NETWORK}
+  deposit-cli-add-recover:
+    restart: "no"
+    user: ${LOCAL_UID}:${LOCAL_UID}
+    build:
+      context: ./eth2.0-deposit-cli
+      args:
+        - BUILD_TARGET=${DEPCLI_BUILD_TARGET}
+        - USER=${DEPCLI_USER}
+        - UID=${LOCAL_UID}
+    image: eth2.0-deposit-cli
+    volumes:
+      - ${DEPCLI_LOCALDIR}:/var/lib/depcli-data
+    entrypoint:
+      - python3
+      - /app/eth2deposit/deposit.py
+      - existing-mnemonic
+      - --folder
+      - /var/lib/depcli-data
+      - --num_validators
+      - ${NUMVAL}
+      - --validator_start_index
+      - ${VAL_START_INDEX}
+      - --chain
+      - ${NETWORK}
   eth2:
     image: tianon/true
     restart: "no"
