--- a/teku-base.yml
+++ b/teku-base.yml
@@ -21,7 +21,7 @@ services:
       - /usr/local/teku/bin/teku
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
-      - --network=${TESTNET}
+      - --network=${NETWORK}
       - --eth1-endpoint=${ETH1_NODE}
       - --p2p-port=${TEKU_PORT}
       - --validators-keystore-locking-enabled=true
@@ -54,12 +54,40 @@ services:
     image: eth2.0-deposit-cli
     volumes:
       - ${DEPCLI_LOCALDIR}:/var/lib/depcli-data
-    entrypoint: ${DEPCLI_ENTRYPOINT}
-    command:
+    entrypoint:
+      - python3
+      - /app/eth2deposit/deposit.py
+      - new-mnemonic
+      - --folder
+      - /var/lib/depcli-data
       - --num_validators
       - ${NUMVAL}
       - --chain
-      - ${TESTNET}
+      - ${NETWORK}
+  deposit-cli-add-recover:
+    restart: "no"
+    user: ${LOCAL_UID}:${LOCAL_UID}
+    build:
+      context: ./eth2.0-deposit-cli
+      args:
+        - BUILD_TARGET=${DEPCLI_BUILD_TARGET}
+        - USER=${DEPCLI_USER}
+        - UID=${LOCAL_UID}
+    image: eth2.0-deposit-cli
+    volumes:
+      - ${DEPCLI_LOCALDIR}:/var/lib/depcli-data
+    entrypoint:
+      - python3
+      - /app/eth2deposit/deposit.py
+      - existing-mnemonic
+      - --folder
+      - /var/lib/depcli-data
+      - --num_validators
+      - ${NUMVAL}
+      - --validator_start_index
+      - ${VAL_START_INDEX}
+      - --chain
+      - ${NETWORK}
   eth2:
     image: tianon/true
     restart: "no"
