--- a/geth.yml
+++ b/geth.yml
@@ -17,6 +17,7 @@ services:
       - ${GETH_PORT}:${GETH_PORT}/udp
     expose:
       - 8545
+      - 8546
     entrypoint:
       - geth
       - --nousb
@@ -29,9 +30,9 @@ services:
       - --ipcdisable
       - --datadir
       - /var/lib/goethereum
-      - --${ETH_NETWORK}
       - --port
       - ${GETH_PORT}
+    command: ${ETH_NETWORK}
   beacon:
     depends_on:
       - geth
