--- a/lh-base.yml
+++ b/lh-base.yml
@@ -26,7 +26,7 @@ services:
       - --http-address
       - 0.0.0.0
       - --testnet
-      - ${TESTNET}
+      - ${NETWORK}
       - --port
       - ${LH_PORT}
       - --eth1-endpoint
@@ -54,7 +54,7 @@ services:
       - --graffiti
       - ${GRAFFITI}
       - --testnet
-      - ${TESTNET}
+      - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
     depends_on:
       - beacon
@@ -82,8 +82,36 @@ services:
       - --directory
       - /var/lib/lighthouse/validator_keys
       - --testnet
-      - ${TESTNET}
+      - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
+  validator-voluntary-exit:
+    restart: "no"
+    user: ${LOCAL_UID}:${LOCAL_UID}
+    image: lighthouse
+    build:
+      context: ./lighthouse
+      args:
+        - BUILD_TARGET=${LH_BUILD_TARGET}
+        - USER=${LH_USER}
+        - UID=${LOCAL_UID}
+    volumes:
+      - lhvalidator-data:/var/lib/lighthouse
+      - ${DEPCLI_LOCALDIR}/validator_keys:/var/lib/lighthouse/validator_keys
+    entrypoint:
+      - lighthouse
+      - account
+      - validator
+      - exit
+      - --beacon-node
+      - http://beacon:5052 
+      - --datadir
+      - /var/lib/lighthouse
+      - --testnet
+      - ${NETWORK}
+      - --debug-level=${LOG_LEVEL}
+      - --keystore
+    depends_on:
+      - beacon
   validator-account:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
@@ -104,7 +132,7 @@ services:
       - --datadir
       - /var/lib/lighthouse
       - --testnet
-      - ${TESTNET}
+      - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
   deposit-cli:
     restart: "no"
@@ -118,12 +146,40 @@ services:
     image: eth2.0-deposit-cli
     volumes:
       - ${DEPCLI_LOCALDIR}:/var/lib/depcli-data
-    entrypoint: ${DEPCLI_ENTRYPOINT}
-    command:
+    entrypoint:
+      - python3
+      - /app/eth2deposit/deposit.py
+      - new-mnemonic
+      - --folder
+      - /var/lib/depcli-data
       - --num_validators
       - ${NUMVAL}
       - --chain
-      - ${TESTNET}
+      - ${NETWORK}
+  deposit-cli-add-recover:
+    restart: "no"
+    user: ${LOCAL_UID}:${LOCAL_UID}
+    build:
+      context: ./eth2.0-deposit-cli
+      args:
+        - BUILD_TARGET=${DEPCLI_BUILD_TARGET}
+        - USER=${DEPCLI_USER}
+        - UID=${LOCAL_UID}
+    image: eth2.0-deposit-cli
+    volumes:
+      - ${DEPCLI_LOCALDIR}:/var/lib/depcli-data
+    entrypoint:
+      - python3
+      - /app/eth2deposit/deposit.py
+      - existing-mnemonic
+      - --folder
+      - /var/lib/depcli-data
+      - --num_validators
+      - ${NUMVAL}
+      - --validator_start_index
+      - ${VAL_START_INDEX}
+      - --chain
+      - ${NETWORK}
   eth2:
     image: tianon/true
     restart: "no"
