Add OpenEthereum eth1 node option

--- a/default.env
+++ b/default.env
@@ -2,9 +2,9 @@
 # This is vital for key import to work. You can find your UID with "echo $UID".
 LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
-COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
-# ETH1 endpoint / chain source. This default uses the geth container
-ETH1_NODE=http://geth:8545
+COMPOSE_FILE=lh-base.yml:oe.yml:lh-grafana.yml
+# ETH1 endpoint / chain source. This default uses the eth1 node container
+ETH1_NODE=http://eth1:8545
 # Graffiti to use for validator, in order to receive POAP
 GRAFFITI=eth2-docker
 # Number of validators to create with deposit-cli
@@ -22,12 +22,15 @@ LOG_LEVEL=info
 NIM_METRICS=NIMFLAGS="-d:insecure"
 # Network to use for eth2. Set to mainnet for main net.
 NETWORK=medalla
-# Network to use for geth. Comment out for main net.
-ETH_NETWORK=--goerli
+# Network to use for eth1. If using OpenEthereum, set to "ethereum" for main net.
+ETH1_NETWORK=goerli
+# If using Geth as the eth1 node, comment out for main net.
+GETH1_NETWORK=--goerli
+ 
 
 # Ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
-GETH_PORT=30303
+ETH1_PORT=30303
 LH_PORT=9000
 PRYSM_PORT=13000
 PRYSM_UDP_PORT=12000
@@ -40,6 +43,11 @@ GRAFANA_PORT=3000
 
 GETH_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 GETH_USER=geth
+
+# Build target dev until #74 has been pulled into main. At that point, switch to release tracking
+OE_BUILD_TARGET=dev
+#OE_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+OE_USER=openethereum
 
 LH_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 LH_USER=lighthouse
