Fix for metanull dashboard

--- a/default.env
+++ b/default.env
@@ -20,11 +20,11 @@ LOG_LEVEL=info
 # Leave this as-is to compile nimbus with support for metrics via grafana. 
 # Change to empty (nothing after first =) to disable that functionality
 NIM_METRICS=NIMFLAGS="-d:insecure"
-# Network to use for eth2. Set to mainnet for main net.
+# Network to use for eth2. If using main net, set to mainnet.
 NETWORK=medalla
-# Network to use for eth1. If using OpenEthereum, set to "ethereum" for main net.
+# Network to use for eth1. If using OpenEthereum and main net, set to ethereum.
 ETH1_NETWORK=goerli
-# If using Geth as the eth1 node, comment out for main net.
+# If using Geth as the eth1 node and main net, comment out.
 GETH1_NETWORK=--goerli
  
 
