--- a/grafana/datasource.yml
+++ b/grafana/datasource.yml
@@ -26,15 +26,15 @@ datasources:
     # <string> database name, if used
     database:
     # <bool> enable/disable basic auth
-    basicAuth: true
+    basicAuth: false
     # <string> basic auth username
-    basicAuthUser: admin
+    basicAuthUser:
     # <string> basic auth password
-    basicAuthPassword: foobar
+    basicAuthPassword:
     # <bool> enable/disable with credentials headers
     withCredentials:
     # <bool> mark as default datasource. Max one per org
-    isDefault:
+    isDefault: true
     # <map> fields that will be converted to json and stored in json_data
     jsonData:
       graphiteVersion: "1.1"
